# sticky-notes

./: .editorconfig  .gitignore  README.md  debug-run.sh  hash.py  run.sh  shell.nix  sticky-notes.cabal  test-data.sh
client/: .gitignore  .prettierrc  index.html  main.js  package-lock.json  package.json
client/components/: index.ts  tsconfig.json
client/css/: style.css
client/js/: .eslintrc.json  Note.ts  NoteRepository.ts  index.ts  tsconfig.json
client/js/utils/: components.ts  fabs.ts  notes.ts  optional.ts  units.ts
client/scss/: _buttons.scss  _cards.scss  _containers.scss  _modal.scss  _theme.scss  style.scss
server/: Config.hs  Hash.hs  Main.hs  Note.hs  Routes.hs  ServerConfig.hs
server/utils/: FileUtils.hs  ListUtils.hs  LogUtils.hs  StringUtils.hs
test/: ConfigSpec.hs  ListUtilsSpec.hs  LogUtilsSpec.hs  ServerConfigSpec.hs
