cabal-version:      2.4
name:               sticky-notes
version:            1.0.0.0

synopsis: A random post web app

description: A web app that allows visitors to post random posts up for anyone to see

homepage: https://github.com/flyingsl0ths/sticky-notes
bug-reports: https://github.com/flyingsl0ths/sticky-notes/issues

license: GPL-3.0-only
license-file: LICENSE
author:             flyingsl0ths
category: Web
extra-source-files:
    CHANGELOG.md
    README.md
    client/index.html
    client/css/style.css
    client/main.js

executable sticky-notes
    main-is:          Main.hs

    other-modules: Note, Routes, ServerConfig, FileUtils, ListUtils

    other-extensions: OverloadedStrings
                      EmptyDataDecls
                      FlexibleContexts
                      FlexibleInstances
                      GADTs
                      GeneralizedNewtypeDeriving
                      MultiParamTypeClasses
                      QuasiQuotes
                      TemplateHaskell
                      TypeFamilies
                      DerivingStrategies
                      StandaloneDeriving
                      UndecidableInstances
                      DerivingStrategies  
                      UndecidableInstances
                      StandaloneDeriving  
                      DataKinds           

    build-depends:    base ^>=4.14.3.0,
                      http-types == 0.12.3,
                      Spock == 0.14.0.0,
                      text == 2.0,
                      aeson == 2.0.3.0,
                      bytestring == 0.10.12.0,
                      monad-logger == 0.3.36,
                      mtl == 2.2.2,
                      persistent == 2.14.0.0,
                      persistent-sqlite == 2.13.1.0,
                      persistent-template == 2.12.0.0

    default-language: Haskell2010

    hs-source-dirs:   server, server/utils

test-suite listutils
  build-depends:      base ^>=4.14.3.0,
                      hspec == 2.9.7

  default-language:   Haskell2010

  type:               exitcode-stdio-1.0

  main-is:            ListUtilsSpec.hs

  hs-source-dirs: test, server/utils

  other-modules: ListUtils

test-suite serverconfig
  build-depends:      base ^>=4.14.3.0,
                      hspec == 2.9.7

  default-language: Haskell2010

  type:               exitcode-stdio-1.0

  main-is:            ServerConfigSpec.hs

  hs-source-dirs: test, server, server/utils

  other-modules: ServerConfig, FileUtils, ListUtils

